--- a/Learn.css
+++ b/Learn.css
@@ -100,7 +100,7 @@ button:last-child {
 .main-footer {
     background-color: #c9b90c21;
     color: rgb(0, 0, 0);
-    padding: 10px;
+    padding-top: 10px;
     text-align: center;
     margin-bottom: 0%;
     width: 100%;
