--- a/Layout.css
+++ b/Layout.css
@@ -11,7 +11,8 @@ html, body {
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    font-size: x-large;
+    /* font-size: x-large; */
+    font-size: 10vw;
 }
 
 /* Centering content */
@@ -74,7 +75,8 @@ button:last-child {
     color: #000000;
     text-align: center;
     margin: 0;
-    position: absolute; 
+    /* position: absolute;  */
+    position: relative; 
     top: 0;
     width: 100%;
     height: auto;
@@ -86,7 +88,9 @@ button:last-child {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: small;
+    /* font-size: small; */
+    font-size: 10vw;
+
     width: 100%;
     padding-bottom: 10px;
 }
