--- a/Layout.css
+++ b/Layout.css
@@ -11,8 +11,8 @@ html, body {
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    /* font-size: x-large; */
-    font-size: 10vw;
+    font-size: x-large;
+    /* font-size: 10vw; */
 }
 
 /* Centering content */
@@ -88,8 +88,8 @@ button:last-child {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* font-size: small; */
-    font-size: 10vw;
+    font-size: small;
+    /* font-size: 10vw; */
 
     width: 100%;
     padding-bottom: 10px;
