--- a/Layout.css
+++ b/Layout.css
@@ -129,6 +129,7 @@ button:last-child {
     width: 100%;
     position: absolute;
     bottom: 0; 
+    font-size: medium;
 }
 
 /* Flexbox container for footer */
