--- a/Layout.css
+++ b/Layout.css
@@ -4,7 +4,7 @@ html, body {
     padding: 0;
     height: 100%;
     width: 100%;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 /* Body styles */
@@ -39,7 +39,8 @@ body {
 /* Arabic content styles */
 .arabic-content {
     text-align: right;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    margin-right: 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -123,7 +124,7 @@ button:last-child {
 .main-footer {
     background-color: #c9b90c21;
     color: rgb(0, 0, 0);
-    padding-right: 15px;
+    /* padding-right: 15px; */
     text-align: center;
     width: 100%;
     position: relative;
@@ -150,8 +151,10 @@ button:last-child {
 .map-container {
     width: 100%;
     height: 100%;
-    max-width: 200px;
-    min-height: 50px;
+    max-width: 150px;
+    width: 150px;
+    height: 120px;
+    min-height: 120px;
     border: 0;
 }
 
