--- a/Learn.css
+++ b/Learn.css
@@ -24,7 +24,6 @@ body {
     font-family: Katibeh;
     flex: 1;
     position: relative; /* Ensure relative positioning for overlay */
-    padding: 1rem; /* Add padding for spacing */
 }
 
 /* Arabic content styles */
@@ -126,14 +125,16 @@ button:last-child {
 .map-container {
     width: 100%;
     height: 100%;
-    max-width: 200px; /* Adjust based on your needs */
-    min-height: 50px; /* Adjust based on your needs */
+    max-width: 150px;
+    width: 150px;
+    height: 120px;
+    min-height: 120px;
     border: 0;
 }
 
-main {
-    padding: 1rem 2rem; /* Use relative units */
-}
+/* main {
+    padding: 1rem 2rem; 
+} */
 
 .navbar {
     display: flex;
