--- a/Learn.css
+++ b/Learn.css
@@ -165,7 +165,48 @@ button:last-child {
     border-radius: 4px;
 }
 
+
+
+
 /* Responsive styles */
+
+@media (max-width: 992px) {
+    .header-container {
+        font-size: 0.875rem; /* Adjust font size for smaller screens */
+    }
+
+    .navbar-menu {
+        font-size: 0.875rem; /* Adjust font size for smaller screens */
+    }
+
+    .left-div, .right-div {
+        margin-right: 20px; /* Reduce margin */
+        flex: 100%; /* Full width */
+    }
+
+    .container {
+        padding: 1.5rem; /* Add padding */
+    }
+
+    #header1 {
+        font-size: 1.75rem; /* Adjust font size for smaller screens */
+    }
+
+    .footer-flex {
+        flex-direction: column; /* Stack items vertically */
+        align-items: flex-start;
+    }
+    body{
+        display: flex;
+        flex-direction: column;
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        font-size: 1rem; /* Use relative units */
+        overflow-x: hidden;
+    }
+}
+
+
 @media (max-width: 768px) {
     .navbar-menu {
         flex-direction: column;
