--- a/Layout.css
+++ b/Layout.css
@@ -215,6 +215,11 @@ main {
 @media (max-width: 992px) {
     body {
         font-size: large;
+        display: flex;
+        flex-direction: column;
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        overflow-x: hidden;
     }
 
     #header1 {
