resposive code added for layout M31 third

--- a/Layout.css
+++ b/Layout.css
@@ -298,7 +298,7 @@ main {
         position: relative;
         bottom: 0; 
         font-size: x-large;
-        margin-top: 254px;
+        margin-top: 2.5%;
     }
     
     .footer-flex {
