--- a/Layout.css
+++ b/Layout.css
@@ -7,15 +7,15 @@ html, body {
     overflow: hidden;
 }
 
-/* Body styles */
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     font-size: x-large;
-    /* font-size: 10vw; */
+
 }
 
-/* Centering content */
+
 .container {
     background-color: #f4f4f4;
     background: url('Images/image.png') no-repeat center center fixed;
@@ -36,7 +36,7 @@ body {
     z-index: -1;
 }
 
-/* Arabic content styles */
+
 .arabic-content {
     text-align: right;
     margin-bottom: 5px;
@@ -44,13 +44,13 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* List styles */
+
 ol {
     list-style: none;
     margin-bottom: 20px;
 }
 
-/* Button styles */
+
 button {
     background-color: #d7c120;
     color: #000000;
@@ -70,12 +70,12 @@ button:last-child {
     margin-right: 0;
 }
 
-/* Header styles */
+
 .main-header {
     color: #000000;
     text-align: center;
     margin: 0;
-    /* position: absolute;  */
+
     position: relative; 
     top: 0;
     width: 100%;
@@ -83,19 +83,19 @@ button:last-child {
     z-index: 1000; 
 }
 
-/* Header container styles */
+
 .header-container {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: small;
-    /* font-size: 10vw; */
+
 
     width: 100%;
     padding-bottom: 10px;
 }
 
-/* Header styles */
+
 #header1 {
     margin: 0;
     padding: 0;
@@ -110,7 +110,7 @@ button:last-child {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-/* Link styles */
+
 .links {
     color: blue;
     font-size: large;
@@ -120,16 +120,17 @@ button:last-child {
     color: #ffeb0f;
 }
 
-/* Footer styles */
+
 .main-footer {
     background-color: #c9b90c21;
     color: rgb(0, 0, 0);
-    /* padding-right: 15px; */
+
     text-align: center;
     width: 100%;
     position: relative;
     bottom: 0; 
     font-size: x-large;
+    margin-top: 2.5%;
 }
 
 .footer-flex {
@@ -141,13 +142,13 @@ button:last-child {
     flex-wrap: wrap;
 }
 
-/* Individual divs */
+
 .left-div, .right-div {
     flex: 1;
     min-width: 200px;
 }
 
-/* Map container styles */
+
 .map-container {
     width: 100%;
     height: 100%;
@@ -193,112 +194,45 @@ main {
     border-radius: 4px;
 }
 
+.navbar-logo a img{
+    height:100px ;
+    width:150px;
+}
+
+
+
+
+
+
 /* Responsive styles */
-@media(max-width:585){
-
-}
-@media (max-width: 1200px) {
-    .header-container {
-        font-size: medium;
-    }
-
-    #header1 {
-        font-size: x-large;
-    }
-
-    #header2 {
-        font-size: medium;
-    }
-
-    .navbar-menu a {
-        padding: 5px;
-    }
-}
-
-@media (max-width: 992px) {
+/*/////////////////////////////////// DONE ////////////////////////////////////*/
+/*375px and 320px*/
+@media (max-width : 425px){
     body {
-        font-size: large;
-        display: flex;
-        flex-direction: column;
-        font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
-        overflow-x: hidden;
+        font-size: 15px;
+        overflow-x: scroll;
     }
 
     #header1 {
-        font-size: large;
+        font-size: 18px;
     }
 
+    .links{
+        font-size: 10px;
+    }
     #header2 {
-        font-size: medium;
+        font-size:20px;
     }
 
-    .navbar-menu a {
-        font-size: medium;
-        padding: 5px;
-    }
-
-    button {
-        padding: 8px 16px;
-    }
-
-}
-
-@media (max-width: 768px) {
-    .navbar-menu {
-        flex-direction: column;
-        align-items: center;
-        margin-left: 0;
-    }
-
-    .navbar-menu a {
-        padding: 10px;
-        font-size: medium;
-    }
-
-    .footer-flex {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .left-div, .right-div {
-        margin-right: 0;
-        margin-bottom: 10px;
-    }
-
-    .map-container {
-        max-width: 100%;
-    }
-}
-
-@media (max-width: 1080px) {
-    body {
-        font-size: x-large;
-    }
-
-    #header1 {
-        font-size: x-large;
-    }
-
-    #header2 {
-        font-size: x-large;
-    }
-
-
-    .navbar-menu a {
-        font-size: large;
-    }
 
     .main-footer {
         background-color: #c9b90c21;
         color: rgb(0, 0, 0);
-        /* padding-right: 15px; */
         text-align: center;
         width: 100%;
         position: relative;
         bottom: 0; 
-        font-size: x-large;
-        margin-top: 2.5%;
+        font-size: 15px;
     }
     
     .footer-flex {
@@ -309,4 +243,746 @@ main {
         align-items: center;
         flex-wrap: wrap;
     }
+    .left-div, .right-div {
+        flex: 2;
+        min-width: 200px;
+        padding-top: 20px;
+    }
+
+    .map-container {
+        max-width: 100%;
+        max-height: 100%;
+        width: 200px;
+        height: 10px;
+        border: 0;
+    }
+
+
+    main {
+        padding-left: 2px;
+        padding-right: 2px;
+        padding-bottom: 5px;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        background-color: #c9b90c21;
+        height: 40px;
+    }
+
+    .navbar-menu {
+        display: flex;
+        list-style: none;
+        padding: 0;
+        font-weight: 600;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-left: 10px;
+    }
+
+    .navbar-menu a {
+        color: #000000;
+        text-decoration: none;
+        padding: 4px 5px;
+        font-size: 12px;
+    }
+
+    .navbar-menu a:hover {
+        background-color: rgba(255, 241, 89, 0.304);
+        border-radius: 4px;
+    }
+
+    .navbar-logo a img{
+        height: 50px;
+        width: 100px;
+    }
+}
+
+
+/*///////////////////////////////////  DONE ///////////////////////////////////*/
+/*425px*/
+@media (max-width : 600px ){
+    body {
+        font-size: 18px;
+        overflow-x: scroll;
+    }
+
+    #header1 {
+        font-size: 20px;
+    }
+
+    .links{
+        font-size: 16px;
+    }
+    #header2 {
+        font-size:20px;
+    }
+
+
+    .main-footer {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        width: 100%;
+        position: relative;
+        bottom: 0; 
+        font-size: 18px;
+        margin-top: 15.4%;
+    }
+    
+    .footer-flex {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .left-div, .right-div {
+        flex: 2;
+        min-width: 200px;
+        padding-top: 5px;
+    }
+
+    .map-container {
+        max-width: 100%;
+        max-height: 100%;
+        width: 100px;
+        height: 20px;
+        border: 0;
+    }
+
+
+    main {
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 5px;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        background-color: #c9b90c21;
+        height: 50px;
+    }
+
+    .navbar-menu {
+        display: flex;
+        list-style: none;
+        padding: 0;
+        font-weight: 600;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-left: 10px;
+    }
+
+    .navbar-menu a {
+        color: #000000;
+        text-decoration: none;
+        padding: 4px 5px;
+        font-size: 12px;
+    }
+
+    .navbar-menu a:hover {
+        background-color: rgba(255, 241, 89, 0.304);
+        border-radius: 4px;
+    }
+
+    .navbar-logo a img{
+        height: 70px;
+        width: 100px;
+    }
+}
+
+
+/*////////////////////////////////////// DONE /////////////////////////////////////////*/
+@media (max-width: 768px) {
+    body {
+        font-size: 20px;
+        overflow-x: scroll;
+    }
+
+    #header1 {
+        font-size: 25px;
+    }
+
+    .links{
+        font-size: 15px;
+    }
+    #header2 {
+        font-size:25px;
+    }
+
+
+    .main-footer {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        width: 100%;
+        position: relative;
+        bottom: 0; 
+        font-size: 20px;
+        margin-top: 2%;
+    }
+    
+    .footer-flex {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .left-div, .right-div {
+        flex: 2;
+        padding-top: 10px;
+    }
+
+    .map-container {
+        max-width: 100%;
+        max-height: 100%;
+        width: 100px;
+        height: 100px;
+        border: 0;
+    }
+
+
+    main {
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-bottom: 20px;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        background-color: #c9b90c21;
+        height: 90px;
+    }
+
+    .navbar-menu {
+        display: flex;
+        list-style: none;
+        padding: 0;
+        font-weight: 600;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-left: 30px;
+        padding-bottom: 30px;
+    }
+
+    .navbar-menu a {
+        color: #000000;
+        text-decoration: none;
+        padding: 10px 10px;
+        font-size: 14px;
+    }
+
+    .navbar-menu a:hover {
+        background-color: rgba(255, 241, 89, 0.304);
+        border-radius: 4px;
+    }
+
+    .navbar-logo a img{
+        height: 80px;
+        width: 120px;
+    }
+}
+
+
+
+/*//////////////////////////////////////// DONE //////////////////////////////////////*/
+@media (max-width: 992px) {
+    body {
+        font-size: 25px;
+        overflow-x: scroll;
+    }
+
+    #header1 {
+        font-size: 30px;
+    }
+
+    .links{
+        font-size: 20px;
+    }
+    #header2 {
+        font-size:30px;
+    }
+
+
+    .main-footer {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        width: 100%;
+        position: relative;
+        bottom: 0; 
+        font-size: 25px;
+        margin-top: 11.5%;
+    }
+    
+    .footer-flex {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .left-div, .right-div {
+        flex: 2;
+        padding-top: 10px;
+    }
+
+    .map-container {
+        max-width: 100%;
+        max-height: 100%;
+        width: 200px;
+        height: 100px;
+        border: 0;
+    }
+
+
+    main {
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-bottom: 20px;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        background-color: #c9b90c21;
+        height: 90px;
+    }
+
+    .navbar-menu {
+        display: flex;
+        list-style: none;
+        padding: 0;
+        font-weight: 600;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-left: 30px;
+        padding-bottom: 5px;
+    }
+
+    .navbar-menu a {
+        color: #000000;
+        text-decoration: none;
+        padding: 10px 10px;
+        font-size: 20px;
+    }
+
+    .navbar-menu a:hover {
+        background-color: rgba(255, 241, 89, 0.304);
+        border-radius: 4px;
+    }
+
+    .navbar-logo a img{
+        height: 150px;
+        width: 200px;
+    }
+} 
+
+
+
+
+/*/////////////////////////////////////// DONE ////////////////////////////////////////*/
+@media (max-width: 1080px) {
+    body {
+        font-size: 25px;
+        overflow-x: scroll;
+    }
+
+    #header1 {
+        font-size: 30px;
+    }
+
+    .links{
+        font-size: 20px;
+    }
+    #header2 {
+        font-size:30px;
+    }
+
+
+    .main-footer {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        width: 100%;
+        position: relative;
+        bottom: 0; 
+        font-size: 25px;
+        margin-top: 10.5%;
+    }
+    
+    .footer-flex {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .left-div, .right-div {
+        flex: 2;
+        padding-top: 10px;
+    }
+
+    .map-container {
+        max-width: 100%;
+        max-height: 100%;
+        width: 200px;
+        height: 100px;
+        border: 0;
+    }
+
+
+    main {
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-bottom: 20px;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        background-color: #c9b90c21;
+        height: 90px;
+    }
+
+    .navbar-menu {
+        display: flex;
+        list-style: none;
+        padding: 0;
+        font-weight: 600;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-left: 30px;
+        padding-bottom: 5px;
+    }
+
+    .navbar-menu a {
+        color: #000000;
+        text-decoration: none;
+        padding: 10px 10px;
+        font-size: 20px;
+    }
+
+    .navbar-menu a:hover {
+        background-color: rgba(255, 241, 89, 0.304);
+        border-radius: 4px;
+    }
+
+    .navbar-logo a img{
+        height: 150px;
+        width: 200px;
+    }
+}
+
+
+
+
+/*////////////////////////////////////// DONE /////////////////////////////////////////*/
+@media (max-width: 1024px) {
+    body {
+        font-size: 25px;
+        overflow-x: scroll;
+    }
+
+    #header1 {
+        font-size: 35px;
+    }
+
+    .links{
+        font-size: 20px;
+    }
+    #header2 {
+        font-size:35px;
+    }
+
+
+    .main-footer {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        width: 100%;
+        position: relative;
+        bottom: 0; 
+        font-size: 25px;
+        margin-top: 10%;
+    }
+    
+    .footer-flex {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .left-div, .right-div {
+        flex: 2;
+        min-width: 200px;
+        padding-top: 20px;
+    }
+
+    .map-container {
+        max-width: 100%;
+        max-height: 100%;
+        width: 200px;
+        height: 100px;
+        border: 0;
+    }
+
+
+    main {
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-bottom: 20px;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        background-color: #c9b90c21;
+        height: 90px;
+    }
+
+    .navbar-menu {
+        display: flex;
+        list-style: none;
+        padding: 0;
+        font-weight: 600;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-left: 30px;
+        padding-bottom: 30px;
+    }
+
+    .navbar-menu a {
+        color: #000000;
+        text-decoration: none;
+        padding: 10px 10px;
+        font-size: 17px;
+    }
+
+    .navbar-menu a:hover {
+        background-color: rgba(255, 241, 89, 0.304);
+        border-radius: 4px;
+    }
+
+    .navbar-logo a img{
+        height: 80px;
+        width: 120px;
+    }
+}
+
+
+
+/*////////////////////////////////////// DONE /////////////////////////////////////////*/
+@media (max-width: 1440px) {
+    body {
+        font-size: 40px;
+        overflow-x: scroll;
+    }
+
+    #header1 {
+        font-size: 50px;
+    }
+
+    .links{
+        font-size: 30px;
+    }
+    #header2 {
+        font-size: 50px;
+    }
+
+
+    .main-footer {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        width: 100%;
+        position: relative;
+        bottom: 0; 
+        font-size: 40px;
+        margin-top: 2.5%;
+
+    }
+    
+    .footer-flex {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .left-div, .right-div {
+        flex: 2;
+        min-width: 290px;
+        padding-top: 10px;
+    }
+
+    .map-container {
+        max-width: 100%;
+        max-height: 100%;
+        width: 280px;
+        height: 200px;
+        border: 0;
+    }
+
+
+    main {
+        padding-left: 100px;
+        padding-right: 100px;
+        padding-bottom: 20px;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        background-color: #c9b90c21;
+        height: 150px;
+    }
+
+    .navbar-menu {
+        display: flex;
+        list-style: none;
+        padding: 0;
+        font-weight: 600;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-left: 30px;
+    }
+
+    .navbar-menu a {
+        color: #000000;
+        text-decoration: none;
+        padding: 10px 20px;
+        font-size: 25px;
+    }
+
+    .navbar-menu a:hover {
+        background-color: rgba(255, 241, 89, 0.304);
+        border-radius: 4px;
+    }
+
+    .navbar-logo a img{
+        height: 150px;
+        width: 200px;
+    }
+}
+
+
+
+/*/////////////////////////////////////// DONE ///////////////////////////////////*/
+@media (max-width: 2560px) {
+    body {
+        font-size: 70px;
+        overflow-x: scroll;
+    }
+
+    #header1 {
+        font-size: 90px;
+    }
+
+    .links{
+        font-size: 60px;
+    }
+    #header2 {
+        font-size: xx-large;
+    }
+
+
+    .navbar-menu a {
+        font-size: large;
+    }
+
+    .main-footer {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        width: 100%;
+        position: relative;
+        bottom: 0; 
+        font-size: 65px;
+        margin-top: 5%;
+    }
+    
+    .footer-flex {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .left-div, .right-div {
+        flex: 2;
+        min-width: 290px;
+        padding-top: 30px;
+    }
+
+.map-container {
+    max-width: 100%;
+    max-height: 100%;
+    width: 550px;
+    height: 320px;
+    border: 0;
+}
+
+
+main {
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 20px;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    background-color: #c9b90c21;
+}
+
+.navbar-menu {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    font-size: 70px;
+    font-weight: 600;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-left: 30px;
+    size: 200px;
+}
+
+.navbar-menu a {
+    color: #000000;
+    text-decoration: none;
+    padding: 20px 30px;
+    font-size: 50px;
+}
+
+.navbar-menu a:hover {
+    background-color: rgba(255, 241, 89, 0.304);
+    border-radius: 4px;
+}
+
+.navbar-logo a img{
+    height: 300px;
+    width: 500px;
+}
 }
