--- a/Layout.css
+++ b/Layout.css
@@ -28,12 +28,13 @@ body {
 
 .container::before {
     content: "";
-    position: absolute;
+    position:fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: -1;
+    background-color: #b2b2b25f;
 }
 
 
@@ -89,6 +90,7 @@ button:last-child {
     justify-content: center;
     align-items: center;
     font-size: small;
+
     width: 100%;
     padding-bottom: 10px;
 }
